<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_pet">

    <ImageView
        android:id="@+id/download_photo_pet"
        android:layout_width="95dp"
        android:layout_height="97dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="158dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/btn_download_photo_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="154dp"
        android:text="@string/download_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_photo_pet" />

    <EditText
        android:id="@+id/pet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/name_pet"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_download_photo_pet" />

    <EditText
        android:id="@+id/age_pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_name" />

    <EditText
        android:id="@+id/weight_pet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_pet" />

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="168dp"
        android:text="@string/OK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_pet" />

</androidx.constraintlayout.widget.ConstraintLayout>